--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,3 +1,6 @@
+# Observação: este é um recorte com os trechos alterados e inseridos
+# Mantive o restante com o marcador obrigatório
+
 trigger:
 - STG
 
@@ -13,9 +16,7 @@ stages:
         displayName: 'Regressivo - Recebiveis'
         steps:
           - task: NodeTool@0
-            displayName: "Install Node.js"
-            inputs:
-              versionSpec: "18.x"
+            versionSpec: '18.x'
           - script: |
               echo "Limpando arquivos anteriores"
               rm -rf "$(Build.SourcesDirectory)/cypress/screenshots"
@@ -98,3 +99,14 @@ stages:
               testResultsFiles: '**/cypress/results/*.xml'
               testRunTitle: 'Cypress Regressivo'
               mergeTestResults: true # Consolida os arquivos em um único reporte no Azure
+          # Publicar resultados nos Test Plans (vínculo por Test Plan/Suite/Case via REST API)
+          - script: |
+              node scripts\publish-azure-testplans.js --AZURE_ORG "$(AZURE_ORG)" --AZURE_PROJECT "$(AZURE_PROJECT)" --AZURE_PAT "$(AZURE_PAT)"
+            displayName: 'Publicar resultados no Azure Test Plans (descoberta automática via argumentos)'
+            env:
+              AZURE_ORG: $(AZURE_ORG)
+              AZURE_PROJECT: $(AZURE_PROJECT)
+              AZURE_PAT: $(AZURE_PAT)
+              AZURE_TEST_PLAN_ID: $(AZURE_TEST_PLAN_ID)
+              AZURE_TEST_SUITE_ID: $(AZURE_TEST_SUITE_ID)
+            condition: succeededOrFailed()
