--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -101,11 +101,13 @@ stages:
               mergeTestResults: true # Consolida os arquivos em um único reporte no Azure
           # Publicar resultados nos Test Plans (vínculo por Test Plan/Suite/Case via REST API)
           - script: |
-              node scripts\publish-azure-testplans.js --AZURE_ORG "$(AZURE_ORG)" --AZURE_PROJECT "$(AZURE_PROJECT)" --AZURE_PAT "$(AZURE_PAT)"
+              node scripts/publish-azure-testplans.js
             displayName: 'Publicar resultados no Azure Test Plans (descoberta automática via argumentos)'
             env:
               AZURE_ORG: $(AZURE_ORG)
               AZURE_PROJECT: $(AZURE_PROJECT)
               AZURE_PAT: $(AZURE_PAT)
+              azure_test_plan_id: $(TEST_PLAN_ID)
+              azure_test_suite_id: $(TEST_SUITE_IDS)
               
             condition: succeededOrFailed()
