--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,6 +1,3 @@
-# Observação: este é um recorte com os trechos alterados e inseridos
-# Mantive o restante com o marcador obrigatório
-
 trigger:
 - STG
 
@@ -16,7 +13,9 @@ stages:
         displayName: 'Regressivo - Recebiveis'
         steps:
           - task: NodeTool@0
-            versionSpec: '18.x'
+            displayName: "Install Node.js"
+            inputs:
+              versionSpec: "18.x"
           - script: |
               echo "Limpando arquivos anteriores"
               rm -rf "$(Build.SourcesDirectory)/cypress/screenshots"
@@ -69,7 +68,7 @@ stages:
 
           # --- ZIP E PUBLICAÇÃO ---
           - task: ArchiveFiles@2
-            displayName: 'Compactar Allure Report em ZIP'
+            displayName: 'Compactar Allure Results em ZIP'
             condition: always()
             inputs:
               rootFolderOrFile: '$(Build.SourcesDirectory)/allure-results'
@@ -96,18 +95,18 @@ stages:
             condition: succeededOrFailed()
             inputs:
               testResultsFormat: 'JUnit'
-              testResultsFiles: '**/cypress/results/*.xml'
+              testResultsFiles: '**/cypress/results/combined.xml'
               testRunTitle: 'Cypress Regressivo'
               mergeTestResults: true # Consolida os arquivos em um único reporte no Azure
           # Publicar resultados nos Test Plans (vínculo por Test Plan/Suite/Case via REST API)
           - script: |
-              node scripts/publish-azure-testplans.js
+              npm install axios fast-xml-parser
+              node ./scripts/publish-azure-testplans.js
             displayName: 'Publicar resultados no Azure Test Plans (descoberta automática via argumentos)'
             env:
-              AZURE_ORG: $(AZURE_ORG)
-              AZURE_PROJECT: $(AZURE_PROJECT)
-              AZURE_PAT: $(AZURE_PAT)
-              azure_test_plan_id: $(TEST_PLAN_ID)
-              azure_test_suite_id: $(TEST_SUITE_IDS)
-              
+              AZURE_ORG: "Edenred-TicketBenefits"
+              AZURE_PROJECT: "Merchants"
+              AZURE_PAT: ""
+              AZURE_TEST_PLAN_ID: "286425"
+              AZURE_TEST_SUITE_ID: "288354,287533"
             condition: succeededOrFailed()
