--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "@badeball/cypress-cucumber-preprocessor": "^22.0.1",
     "allure-commandline": "^2.34.1",
     "cypress-plugin-api": "^2.11.2",
-    "cypress-real-events": "^1.14.0"
+    "cypress-real-events": "^1.14.0",
+    "pdfkit": "^0.15.0",
+    "ip": "^1.1.8"
   },
   "cypress-cucumber-preprocessor": {
     "json": {
