--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "scripts": {
     "cy:open": "cypress run open",
     "cy:run": "cypress run",
+    "cy:pipeline": "cypress run --env GENERATE_PDF=true",
     "allure:generate": "allure generate allure-results --clean -o allure-report",
     "allure:serve": "allure serve allure-results",
     "test": "npm run cy:run && npm run allure:generate && npm run allure:serve",
@@ -34,8 +35,8 @@
     "allure-commandline": "^2.34.1",
     "cypress-plugin-api": "^2.11.2",
     "cypress-real-events": "^1.14.0",
-    "pdfkit": "^0.15.0",
-    "ip": "^1.1.8"
+    "ip": "^1.1.8",
+    "pdfkit": "^0.15.2"
   },
   "cypress-cucumber-preprocessor": {
     "json": {
